<resources>
    <string name="app_name">Payzan App</string>
    <string name="facebook_app_id">267297907115951</string>
    <string name="fb_login_protocol_scheme">fb267297907115951</string>
    <string name="com_facebook_loginview_log_in_button">Connect</string>
    <string name="com_facebook_loginview_log_out_button">Your Logout</string>
    <string name="terms_and_conditions">By logging in,you accept our Term\'s &amp; Conditions and Privacy Policy</string>
    <string name="terms_and_conditions_signup">By Signup in,you accept our Term\'s &amp; Conditions and Privacy Policy.</string>
    <string name="canotlogin"> Can not Login..?</string>
    <string name="mobile_recharge_sname">"Mobile Recharge &amp; Pay Bill"</string>
    <string name="dth_sname">"DTH"</string>
    <string name="water_sname">"Water"</string>
    <string name="landline_sname">"Landline"</string>
    <string name="cabletv_sname">"Cable TV"</string>
    <string name="datacard_sname">"Data Card"</string>
    <string name="electricity_sname">"Electricity"</string>
    <string name="broadband_sname">"Broadband"</string>
    <string name="wallet_sname">" My Wallet"</string>
    <string name="offer_sname">"Offers"</string>
    <string name="login_sname">"Login"</string>
    <string name="add_money_to_wallet">Add Money To Wallet</string>
    <string name="enter_amount_to_be_added_in_the_wallet">Enter Amount To Be Add In The Wallet</string>
    <string name="enter_promo_code">Enter Promo Code(Optional)</string>
    <string name="add_money">Add money</string>
    <string name="subscriber_id">Subscriber ID</string>
    <string name="select_operator">Select Operator</string>
    <string name="amount">Amount</string>
    <string name="signin_with_facebook">Signin with Facebook</string>
    <string name="password">Password </string>
    <string name="mobile">Mobile </string>
    <string name="login">Login</string>
    <string name="don_t_have_account_signup">Don\'t have account..?Signup</string>
    <string name="signin_with_google">Signin with Google</string>
    <string name="signin_with_google_test">Signin with Google</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="current_operator">Current Operator</string>
    <string name="talktime_topup">Talktime Topup</string>
    <string name="special_recharge">Special Recharge</string>
    <string name="proceed_to_recharge">Proceed To Recharge</string>
    <string name="select_district">Select District</string>
    <string name="service_no">Service Number</string>
    <string name="consumer_no">Consumer Number</string>
    <string name="proceed_to_pay_bill">Proceed To Pay Bill</string>
    <string name="landline">Landline</string>
    <string name="operator">Operator</string>
    <string name="number_with_std_code">Number With STD Code</string>
    <string name="select_circle">Select Circle</string>
    <string name="browse_plans">Browse Plans</string>
    <string name="recharge">Recharge</string>
    <string name="profile">Profile</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="mobile_number_signup">Mobile Number</string>
    <string name="email_mandatory">Email</string>
    <string name="create_password">Create Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">- or -</string>
    <string name="order_no">Order No 1234567</string>
    <string name="date_order">15 sep 2017 08:15 PM</string>
    <string name="comments">Comment(Optional)</string>
    <string name="send_money">Send Money</string>
    <string name="select_board">Select Board</string>
    <string name="already_have_account">Already have account? Login</string>
    <string name="about_us">"About Us"</string>
    <string name="addcard">"Add New Card"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_card_number">Data Card Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Update_Password">Update Password</string>
    <string name="search_transactionid">Search Transaction id,Mobile No...</string>
    <string name="AgentTransaction">Transaction</string>
    <string name="AgentCommision">Commission</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="expirydate">Expiry Date</string>
    <string name="card_holder_name">Card Holder name </string>
    <string name="card_label">Card Label(Optional)</string>
    <string name="savethis_card">Save This Card For Further Transaction</string>
    <string name="savecard">Save Card</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="retypepassword">Re-Type New Password</string>
    <string name="change_password">Change Password</string>
    <string name="order_history">Order History</string>
    <string name="terms_of_services">Terms Of Service</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="accountno">4166xxxxxxxxxxx000000|Bank Name</string>
    <string name="savecardslock">Your Details Are Secured Via 128 Bit Encryption By xxxx</string>
    <string name="note">Note:Once The Password Change Is Successful,You Will Need To Re-Login</string>
    <string-array name="month_arrays">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="ok">Ok</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string-array name="year_arrays">
        <item>Year</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>

    </string-array>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string name="payzan_wallet">PAYZAN WALLET</string>
    <string name="recharge_and_bill_payments">RECHARGE AND BILL PAYMENTS</string>
    <string name="wallet_balance">Wallet Balance: </string>
    <string name="paysemd">Pay/Send</string>
    <string name="add_withdraw">Add/Withdraw</string>
    <string name="MyTransactions">My Transactions</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="offers">Offers</string>
    <string name="lang">Select language</string>
    <string name="contin">Continue</string>
    <string name="support">Support</string>
    <string name="choose_language">Choose Your Language</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name(optional)</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="email">Email</string>
    <string name="province_name">Province </string>
    <string name="mandal_name">Mandal</string>
    <string name="village_name">Village</string>
    <string name="district_name">District</string>
    <string name="title_type">Title</string>
    <string name="select_province">Select Province</string>
    <string name="select_mandal">Select Mandal</string>
    <string name="select_village">Select Village</string>
    <string name="please_select_village">Please Select Village</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="landmark">Landmark</string>
    <string name="enter_your_comments">Enter Your Comments</string>
    <string name="submit">Submit</string>
    <string name="partner_with_payzan">Partner With Payzan</string>
    <string name="received">Received</string>
    <string name="my_transaction">My Transactions</string>
    <string name="send_money_to_wallet">Send Money To Wallet</string>
    <string name="all">All</string>
    <string name="paid">Paid</string>
    <string name="added">Added</string>
    <string name="add_moneys">+Add Money</string>
    <string name="prepaid">Prepaid</string>
    <string name="postpaid">Postpaid</string>
    <string name="save_card">Save Card</string>
    <string name="save">Save</string>
    <string name="user_name">User Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="update_operator">Update Operator</string>
    <string name="account_number">Account Number</string>
    <string name="err_enter_mobile_number">Please Enter Mobile Number</string>
    <string name="err_enter_valid_mobile_no"> Please Enter 10 Digit Mobile Number</string>
    <string name="err_select_operator">Select Operator</string>
    <string name="err_enter_amount">Please Enter Amount</string>
    <string name="err_please_select_operator">Please Select Operator</string>
    <string name="err_please_select_circle">Please Select Circle</string>
    <string name="err">Enter Number</string>
    <string name="err_select_circle">Select Circle</string>
    <string name="err_enter_subscriber_id">Please Enter Subscriber ID</string>
    <string name="err_please_enter_service_no">Please Enter Service Number</string>
    <string name="err_please_enter_amount">Please Enter Amount</string>
    <string name="err_enter_account_no">Please Enter Account Number</string>
    <string name="err_select_district">Select District</string>
    <string name="err_enter_service_no">Please Enter Service Number</string>
    <string name="err_select_board">Select Board</string>
    <string name="err_enter_consumer_no">Please Enter Consumer Number</string>
    <string name="err_enter_data_card_no">Please Enter Data Card Number.</string>
    <string name="err_enter_mobile_no">Please Enter Mobile Number</string>
    <string name="err_enter_first_name">Please Enter First Name</string>
    <string name="err_enter_middle_name">Please Enter Middle Name</string>
    <string name="err_enter_last_name">Please Enter Last Name</string>
    <string name="err_enter_email_id">Please Enter Email ID</string>
    <string name="err_enter_valid_email">Enter Valid Email</string>
    <string name="err_enter_state_name">Enter State Name</string>
    <string name="err_enter_district_name">Enter District Name</string>
    <string name="err_enter_mandal_name">Enter Mandal Name</string>
    <string name="err_enter_village_name">Enter Village Name</string>
    <string name="pay_now">Pay Now</string>
    <string name="save_this_card_for_further_transaction">Save This Card For Further Transaction</string>
    <string name="card_label_optional">Card Label(Optional)</string>
    <string name="card_holder_s_name">Card Holder\'s Name</string>
    <string name="cvv">cvv</string>
    <string name="name_adp">Name: </string>
    <string name="address1_adp">Address1: </string>
    <string name="address2_adp">Address2: </string>
    <string name="pincode_adp">Pin Code: </string>
    <string name="edit_btn">Edit</string>
    <string name="no_records_found">No Records Found</string>
</resources>