<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fiveDp"
            android:layout_margin="@dimen/twoDp">

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_adp" />

            <TextView
                android:id="@+id/address1_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_txt"
                android:text="@string/address1_adp" />

            <TextView
                android:id="@+id/address2_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address1_txt"
                android:text="@string/address2_adp" />

            <TextView
                android:id="@+id/pincode_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address2_txt"
                android:text="@string/pincode_adp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/address1_txt"
                android:layout_marginRight="@dimen/tenDp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/tenDp"
                    android:text="@string/edit_btn"
                    app:srcCompat="@drawable/ic_edit"
                    android:padding="4dp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/btn_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/twoDp"
                    app:srcCompat="@drawable/ic_rubbish_bin" />
            </LinearLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>